# nairatax-xyz

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ai.md  pyproject.toml
.github/workflows/: ci.yml
docs/: methodology.md
src/nairatax/: __init__.py  cli.py  config.py  models.py  pipeline.py  pricing.py
src/nairatax/classification/: classifier.py
src/nairatax/cost_basis/: fifo.py
src/nairatax/ingestion/: horizon_client.py  normalize.py
src/nairatax/reporting/: builder.py  export.py
src/nairatax/rules/: engine.py  loader.py  schema.py
src/nairatax/rules/packs/: nigeria.yaml
tests/: test_classifier.py  test_cli.py  test_config.py  test_end_to_end.py  test_export.py  test_export_json.py  test_fifo.py  test_horizon_client.py  test_models.py  test_nigeria_pack.py  test_normalize.py  test_pipeline.py  test_pricing.py  test_report_builder.py  test_rule_pack.py  test_rules_engine.py
