[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nairatax"
version = "0.1.0"
description = "On-chain tax reporting engine for the Stellar ecosystem, starting with Nigeria."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NairaTax" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
nairatax = "nairatax.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nairatax"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# typer's documented style is `arg: T = typer.Option(...)` — the "function
# call in a default argument" B008 warning doesn't apply to it.
"src/nairatax/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
